sumo/tests/traci/ChangeVehicleValue/ChangeTarget/InvalidNodeId/testclient.prog
simstep2 1
setvalue 0xc4 0x31 xxx <string> e_vo0
simstep2 1
